# pleme-linker

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  DESIGN.md  README.md  flake.nix
src/: build.rs  build_library.rs  build_project.rs  cli.rs  legacy.rs  main.rs  regen.rs  resolve.rs  rolldown_bundler.rs  swc_compiler.rs  types.rs  utils.rs
src/web_bundler/: mod.rs
src/web_bundler/tests/: edge_cases.rs  exports.rs  externals.rs  import_meta.rs  imports.rs  interop.rs  mod.rs  path_resolution.rs  tree_shaking.rs  typescript.rs
