[package]
name = "pleme-linker"
version = "0.3.0"
edition = "2021"
authors = ["Pleme Team <team@pleme.io>"]
description = "Nix-native JavaScript package manager"
license = "MIT"
repository = "https://github.com/pleme-io/pleme-linker"
homepage = "https://github.com/pleme-io/pleme-linker"
readme = "README.md"
keywords = ["nix", "javascript", "package-manager", "npm", "linker"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["module/", "target/", "result-*", "Cargo.nix", "flake.*"]

[[bin]]
name = "pleme-linker"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

# Archive handling
flate2 = "1.0"
tar = "0.4"

# HTTP client for npm registry
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Semver resolution
semver = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# OXC - Oxidation Compiler (powers Rolldown internally)
# Pure Rust JavaScript/TypeScript toolchain: parser, transformer, minifier
# https://oxc.rs - the same technology that Rolldown uses
oxc = { version = "0.99.0", features = ["full"] }

# OXC Resolver - Production-ready module resolution
# Used by Rolldown, Nova, swc-node for resolving imports
# https://github.com/oxc-project/oxc-resolver
oxc_resolver = "6"

# Regex for glob patterns in asset handling
regex = "1"

# Legacy (to be removed after migration)
serde_yaml = "0.9"
walkdir = "2.5"
